--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -7,14 +7,15 @@ from snakemake.utils import validate
 from datetime import date
 from treetime.utils import numeric_date
 
+from itertools import product, chain
 
 configfile: "config.yaml"
 validate(config, schema="schemas/config.schema.yaml")
 
 BUILD_NAMES = list(config["builds"].keys())
-ANALYSIS_NAME = config["beast"]["xml"][:-4]
+ANALYSIS_NAME = list(chain.from_iterable([config["builds"][build_name]["beast_analysis"] for build_name in BUILD_NAMES]))
 SEED = 1234
-
+ 
 # Define patterns we expect for wildcards.
 wildcard_constraints:
     # Allow build names to contain alpha characters, underscores, and hyphens
@@ -25,12 +26,27 @@ wildcard_constraints:
 
 localrules: load
 
+
+def filter_combinator(combinator, combinations):
+    def filtered_combinator(*args, **kwargs):
+        for wc_comb in combinator(*args, **kwargs):
+            # Use frozenset instead of tuple
+            # in order to accomodate
+            # unpredictable wildcard order
+            if frozenset(wc_comb) in combinations:
+                yield wc_comb
+    return filtered_combinator
+
+combinations = list(chain.from_iterable([[frozenset(sett) for sett in product(frozenset({("build_name", build_name)}), frozenset(product(["analysis_name"], config["builds"][build_name]["beast_analysis"])))] for build_name in BUILD_NAMES]))
+filtered_product = filter_combinator(product, combinations)
+
 rule all:
-  input:
-    prelim_tree = expand("results/{build_name}/tree.nwk", build_name=BUILD_NAMES),
-    summary_tree = expand("results/{build_name}/{analysis_name}.mcc.typed.node.tree", build_name=BUILD_NAMES, analysis_name=ANALYSIS_NAME),
-    summary_log =  expand("results/{build_name}/{analysis_name}_comb.logsummary.tsv", build_name=BUILD_NAMES, analysis_name=ANALYSIS_NAME),
-    fig_traj = expand("results/{build_name}/{analysis_name}.figtraj.png", build_name=BUILD_NAMES, analysis_name=ANALYSIS_NAME)
+    input:
+        prelim_tree = expand("results/{build_name}/tree.nwk", build_name=BUILD_NAMES),
+        summary_tree = expand("results/{build_name}/{analysis_name}/{analysis_name}.mcc.typed.node.tree", filtered_product, build_name=BUILD_NAMES, analysis_name=ANALYSIS_NAME),
+        fig_traj = expand("results/{build_name}/{analysis_name}/{analysis_name}.figtraj.png", filtered_product, build_name=BUILD_NAMES, analysis_name=ANALYSIS_NAME),
+        summary_log =  expand("results/{build_name}/{analysis_name}/{analysis_name}_comb.logsummary.tsv", filtered_product, build_name=BUILD_NAMES, analysis_name=ANALYSIS_NAME),
+        
 
 rule clean:
     message: "Removing directories: {params}"
@@ -581,13 +597,13 @@ rule beast:
         Running BEAST2 analysis BDMM-Prime, MCMC chain {wildcards.seed}.
         """
     input:
-        xml = config["beast"]["xml"],
+        xml = _get_beast_analysis,
         alignment = rules.adjust_names.output.alignment
     output:
-        beast_log = "results/{build_name}/{analysis_name}.{seed}.log",
-        trees = "results/{build_name}/{analysis_name}.{seed}.trees",
+        beast_log = "results/{build_name}/{analysis_name}/{analysis_name}.{seed}.log",
+        trees = "results/{build_name}/{analysis_name}/{analysis_name}.{seed}.trees",
     log:
-        "logs/beast_{build_name}_{analysis_name}.{seed}.txt"
+        "logs/beast_{build_name}_{analysis_name}/{analysis_name}.{seed}.txt"
     params:
         jar = config["beast"]["jar"],
         seed = config["beast"]["n_mcmc"],
@@ -606,9 +622,9 @@ rule summarize_log:
     input: 
         beast_log = rules.beast.output.beast_log
     output:
-        log_summary = "results/{build_name}/{analysis_name}.{seed}.logsummary.txt"
+        log_summary = "results/{build_name}/{analysis_name}/{analysis_name}.{seed}.logsummary.txt"
     log:
-        "logs/{build_name}_{analysis_name}.{seed}.summarize_logs.txt"
+        "logs/{build_name}_{analysis_name}/{analysis_name}.{seed}.summarize_logs.txt"
     params:
         log_analyser = config["beast"]["log_analyser"],
         burnin = config["beast"]["burnin"] * config["beast"]["l_mcmc"]
@@ -618,8 +634,8 @@ rule summarize_log:
         """
 
 def _get_logsummary(wildcards):
-    files = expand("results/{build_name}/{analysis_name}.{seed}.logsummary.txt", 
-        build_name=BUILD_NAMES, analysis_name=ANALYSIS_NAME, seed=config["beast"]["n_mcmc"])
+    files = expand("results/{{build_name}}/{{analysis_name}}/{{analysis_name}}.{seed}.logsummary.txt",
+        seed=config["beast"]["n_mcmc"])
     return files
 
 checkpoint chains_diagnostic:
@@ -630,11 +646,11 @@ checkpoint chains_diagnostic:
     input:
         log_summary = _get_logsummary
     output:
-        diagnostic = "results/{build_name}/{analysis_name}_chains_diagnostic.txt",
+        diagnostic = "results/{build_name}/{analysis_name}/{analysis_name}_chains_diagnostic.txt",
     params:
         min_ess = config["beast"]["min_ess"]
     log:
-        "logs/{build_name}_{analysis_name}_chains_diagnostic.txt"
+        "logs/{build_name}_{analysis_name}/{analysis_name}_chains_diagnostic.txt"
     shell:
         """
         Rscript scripts/chains_diagnostic.R \
@@ -646,16 +662,16 @@ checkpoint chains_diagnostic:
 def _get_logs_tocombine(wildcards):
     diagnostic = pd.read_csv(checkpoints.chains_diagnostic.get(**wildcards).output[0].open(), sep="\t")
     return expand(
-        "results/{build_name}/{analysis_name}.{seed}.log",
-        build_name=wildcards.build_name, analysis_name=wildcards.analysis_name,
+        expand("results/{build_name}/{analysis_name}/{analysis_name}.{{seed}}.log", zip,
+        build_name=wildcards.build_name, analysis_name=wildcards.analysis_name),
         seed=diagnostic[diagnostic["included"] == 1]["seed"]
     )
 
 def _get_trees_tocombine(wildcards):
     diagnostic = pd.read_csv(checkpoints.chains_diagnostic.get(**wildcards).output[0].open(), sep="\t")
     return expand(
-        "results/{build_name}/{analysis_name}.{seed}.trees",
-        build_name=wildcards.build_name, analysis_name=wildcards.analysis_name,
+        expand("results/{build_name}/{analysis_name}/{analysis_name}.{{seed}}.trees", zip,
+        build_name=wildcards.build_name, analysis_name=wildcards.analysis_name),
         seed=diagnostic[diagnostic["included"] == 1]["seed"]
     )
 
@@ -668,9 +684,9 @@ rule combine_logs:
     input:
         log_files = _get_logs_tocombine
     output:
-        combined_log = "results/{build_name}/{analysis_name}_comb.log"
+        combined_log = "results/{build_name}/{analysis_name}/{analysis_name}_comb.log"
     log:
-        "logs/{build_name}_{analysis_name}_combine_logs"
+        "logs/{build_name}_{analysis_name}/{analysis_name}_combine_logs"
     params:
         log_combiner = config["beast"]["log_combiner"],
         burnin = config["beast"]["burnin"] * config["beast"]["l_mcmc"]
@@ -687,9 +703,9 @@ rule combine_trees:
     input:
         tree_files = _get_trees_tocombine
     output:
-        combined_trees = "results/{build_name}/{analysis_name}_comb.trees"
+        combined_trees = "results/{build_name}/{analysis_name}/{analysis_name}_comb.trees"
     log:
-        "logs/{build_name}_{analysis_name}_combine_trees"
+        "logs/{build_name}_{analysis_name}/{analysis_name}_combine_trees"
     params:
         log_combiner = config["beast"]["log_combiner"],
         burnin = config["beast"]["burnin"] * config["beast"]["l_mcmc"]
@@ -704,11 +720,11 @@ rule trajectory_mapping:
         combined_log = rules.combine_logs.output.combined_log,
         combined_trees = rules.combine_trees.output.combined_trees
     output:
-        typed_trees = "results/{build_name}/{analysis_name}.typed.trees",
-        node_typed_trees = "results/{build_name}/{analysis_name}.typed.node.trees",
-        trajectories = "results/{build_name}/{analysis_name}.TL.traj"
+        typed_trees = "results/{build_name}/{analysis_name}/{analysis_name}.typed.trees",
+        node_typed_trees = "results/{build_name}/{analysis_name}/{analysis_name}.typed.node.trees",
+        trajectories = "results/{build_name}/{analysis_name}/{analysis_name}.TL.traj"
     log:
-        "logs/{build_name}_{analysis_name}_trajectory_mapping"
+        "logs/{build_name}_{analysis_name}/{analysis_name}_trajectory_mapping"
     params:
         jar = config["beast"]["jar"],
     shell:
@@ -724,9 +740,9 @@ rule summarize_comb_log:
     input:
         combined_log = rules.combine_logs.output.combined_log
     output:
-        summary_log = "results/{build_name}/{analysis_name}_comb.logsummary.tsv"
+        summary_log = "results/{build_name}/{analysis_name}/{analysis_name}_comb.logsummary.tsv"
     log:
-        "logs/{build_name}_{analysis_name}.summarize_comb_log.txt"
+        "logs/{build_name}_{analysis_name}/{analysis_name}.summarize_comb_log.txt"
     params:
         log_analyser = config["beast"]["log_analyser"]
     shell:
@@ -744,9 +760,9 @@ rule summarize_trees:
     input:
         combined_trees = rules.trajectory_mapping.output.node_typed_trees
     output:
-        summary_tree = "results/{build_name}/{analysis_name}.mcc.typed.node.tree"
+        summary_tree = "results/{build_name}/{analysis_name}/{analysis_name}.mcc.typed.node.tree"
     log:
-        "logs/{build_name}_{analysis_name}_summarize_trees"
+        "logs/{build_name}_{analysis_name}/{analysis_name}_summarize_trees"
     params:
         tree_annotator = config["beast"]["tree_annotator"],
         heights = config["beast"]["mcc_heights"]
@@ -766,9 +782,9 @@ rule analyze_trajectories:
         trajectories = rules.trajectory_mapping.output.trajectories,
         metadata = rules.adjust_names.output.metadata
     output:
-        fig_traj = "results/{build_name}/{analysis_name}.figtraj.png" 
+        fig_traj = "results/{build_name}/{analysis_name}/{analysis_name}.figtraj.png" 
     log:
-        "logs/{build_name}_{analysis_name}_analyze_trajectories"
+        "logs/{build_name}_{analysis_name}/{analysis_name}_analyze_trajectories"
     params:
         burnin = config["beast"]["burnin"],
         demes = _get_subsampling_settings
